# OperatingSystems-LinuxScripting

./: README.md
LAB10/: fileOperations2.sh
LAB11/: .processes.sh.swp  1  processes.sh
LAB12/: prodCons.sh
LAB5/: sampleText.txt  textSearch.sh
LAB6/: .arithmethic.sh.swo  .arithmethic.sh.swp  arithmethic.sh
LAB7/: .arrays.sh.swn  .arrays.sh.swo  .arrays.sh.swp  1  arrays.sh  arrayss.sh
LAB8/: fileOperations.sh  filesToCreate  t1  t2  test
LAB9/: fileStats.sh
PROJECT/CPUSchedAlgSimulation/: CMakeLists.txt  main.cpp
PROJECT/CPUSchedAlgSimulation/SchedulingAlgorithms/: RoundRobin.cpp  RoundRobin.h  SJF.cpp  SJF.h  SchedulingAlgorithm.cpp  SchedulingAlgorithm.h
PROJECT/CPUSchedAlgSimulation/SystemObjects/: Process.cpp  Process.h
